archive/2025-06-07_pre_major_changes/src/parser/BioGPUParser.cpp

// Generated from BioGPU.g4 by ANTLR 4.10.1


#include "BioGPUVisitor.h"

#include "BioGPUParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct BioGPUParserStaticData final {
  BioGPUParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  BioGPUParserStaticData(const BioGPUParserStaticData&) = delete;
  BioGPUParserStaticData(BioGPUParserStaticData&&) = delete;
  BioGPUParserStaticData& operator=(const BioGPUParserStaticData&) = delete;
  BioGPUParserStaticData& operator=(BioGPUParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag biogpuParserOnceFlag;
BioGPUParserStaticData *biogpuParserStaticData = nullptr;

void biogpuParserInitialize() {
  assert(biogpuParserStaticData == nullptr);
  auto staticData = std::make_unique<BioGPUParserStaticData>(
    std::vector<std::string>{
      "program", "importStatement", "modulePath", "pipeline", "pipelineBody", 
      "inputDecl", "inputParam", "outputDecl", "outputParam", "referencesDecl", 
      "referenceParam", "stage", "decorator", "decoratorArgs", "decoratorArg", 
      "stageBody", "statement", "assignment", "functionCall", "argumentList", 
      "configBlock", "configParam", "parallelMap", "parallelConfig", "ifStatement", 
      "forStatement", "emitStatement", "reportBlock", "reportStatement", 
      "expression", "array", "literal", "dataType", "referenceType"
    },
    std::vector<std::string>{
      "", "'@'", "'pipeline'", "'stage'", "'input'", "'output'", "'references'", 
      "'import'", "'as'", "'if'", "'else'", "'for'", "'foreach'", "'in'", 
      "'emit'", "'report'", "'print'", "'alert'", "'recommendation'", "'parallel_map'", 
      "'optional'", "'fastq_file'", "'fasta_file'", "'csv_file'", "'json'", 
      "'pdf'", "'string'", "'int'", "'float'", "'boolean'", "'array'", "'map'", 
      "'genome_database'", "'mutation_database'", "'gene_database'", "'@gpu_kernel'", 
      "'@parallel'", "'='", "'.'", "','", "';'", "':'", "'('", "')'", "'{'", 
      "'}'", "'['", "']'", "'<'", "'>'"
    },
    std::vector<std::string>{
      "", "", "PIPELINE", "STAGE", "INPUT", "OUTPUT", "REFERENCES", "IMPORT", 
      "AS", "IF", "ELSE", "FOR", "FOREACH", "IN", "EMIT", "REPORT", "PRINT", 
      "ALERT", "RECOMMENDATION", "PARALLEL_MAP", "OPTIONAL", "FASTQ_FILE", 
      "FASTA_FILE", "CSV_FILE", "JSON", "PDF", "STRING_TYPE", "INT_TYPE", 
      "FLOAT_TYPE", "BOOLEAN_TYPE", "ARRAY", "MAP", "GENOME_DATABASE", "MUTATION_DATABASE", 
      "GENE_DATABASE", "GPU_KERNEL", "PARALLEL", "ASSIGN", "DOT", "COMMA", 
      "SEMI", "COLON", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
      "RBRACK", "LT", "GT", "BOOLEAN", "NUMBER", "STRING", "DNA_SEQUENCE", 
      "ID", "COMMENT", "BLOCK_COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  biogpuParserStaticData = staticData.release();
}

}

BioGPUParser::BioGPUParser(TokenStream *input) : BioGPUParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

BioGPUParser::BioGPUParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  BioGPUParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *biogpuParserStaticData->atn, biogpuParserStaticData->decisionToDFA, biogpuParserStaticData->sharedContextCache, options);
}

BioGPUParser::~BioGPUParser() {
  delete _interpreter;
}

const atn::ATN& BioGPUParser::getATN() const {
  return *biogpuParserStaticData->atn;
}

std::string BioGPUParser::getGrammarFileName() const {
  return "BioGPU.g4";
}

const std::vector<std::string>& BioGPUParser::getRuleNames() const {
  return biogpuParserStaticData->ruleNames;
}

const dfa::Vocabulary& BioGPUParser::getVocabulary() const {
  return biogpuParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView BioGPUParser::getSerializedATN() const {
  return biogpuParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

BioGPUParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::ProgramContext::EOF() {
  return getToken(BioGPUParser::EOF, 0);
}

std::vector<BioGPUParser::ImportStatementContext *> BioGPUParser::ProgramContext::importStatement() {
  return getRuleContexts<BioGPUParser::ImportStatementContext>();
}

BioGPUParser::ImportStatementContext* BioGPUParser::ProgramContext::importStatement(size_t i) {
  return getRuleContext<BioGPUParser::ImportStatementContext>(i);
}

std::vector<BioGPUParser::PipelineContext *> BioGPUParser::ProgramContext::pipeline() {
  return getRuleContexts<BioGPUParser::PipelineContext>();
}

BioGPUParser::PipelineContext* BioGPUParser::ProgramContext::pipeline(size_t i) {
  return getRuleContext<BioGPUParser::PipelineContext>(i);
}


size_t BioGPUParser::ProgramContext::getRuleIndex() const {
  return BioGPUParser::RuleProgram;
}


std::any BioGPUParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::ProgramContext* BioGPUParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BioGPUParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BioGPUParser::IMPORT) {
      setState(68);
      importStatement();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BioGPUParser::PIPELINE) {
      setState(74);
      pipeline();
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(80);
    match(BioGPUParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatementContext ------------------------------------------------------------------

BioGPUParser::ImportStatementContext::ImportStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::ImportStatementContext::IMPORT() {
  return getToken(BioGPUParser::IMPORT, 0);
}

BioGPUParser::ModulePathContext* BioGPUParser::ImportStatementContext::modulePath() {
  return getRuleContext<BioGPUParser::ModulePathContext>(0);
}

tree::TerminalNode* BioGPUParser::ImportStatementContext::SEMI() {
  return getToken(BioGPUParser::SEMI, 0);
}

tree::TerminalNode* BioGPUParser::ImportStatementContext::AS() {
  return getToken(BioGPUParser::AS, 0);
}

tree::TerminalNode* BioGPUParser::ImportStatementContext::ID() {
  return getToken(BioGPUParser::ID, 0);
}


size_t BioGPUParser::ImportStatementContext::getRuleIndex() const {
  return BioGPUParser::RuleImportStatement;
}


std::any BioGPUParser::ImportStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitImportStatement(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::ImportStatementContext* BioGPUParser::importStatement() {
  ImportStatementContext *_localctx = _tracker.createInstance<ImportStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, BioGPUParser::RuleImportStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(BioGPUParser::IMPORT);
    setState(83);
    modulePath();
    setState(86);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BioGPUParser::AS) {
      setState(84);
      match(BioGPUParser::AS);
      setState(85);
      match(BioGPUParser::ID);
    }
    setState(88);
    match(BioGPUParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModulePathContext ------------------------------------------------------------------

BioGPUParser::ModulePathContext::ModulePathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> BioGPUParser::ModulePathContext::ID() {
  return getTokens(BioGPUParser::ID);
}

tree::TerminalNode* BioGPUParser::ModulePathContext::ID(size_t i) {
  return getToken(BioGPUParser::ID, i);
}

std::vector<tree::TerminalNode *> BioGPUParser::ModulePathContext::DOT() {
  return getTokens(BioGPUParser::DOT);
}

tree::TerminalNode* BioGPUParser::ModulePathContext::DOT(size_t i) {
  return getToken(BioGPUParser::DOT, i);
}


size_t BioGPUParser::ModulePathContext::getRuleIndex() const {
  return BioGPUParser::RuleModulePath;
}


std::any BioGPUParser::ModulePathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitModulePath(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::ModulePathContext* BioGPUParser::modulePath() {
  ModulePathContext *_localctx = _tracker.createInstance<ModulePathContext>(_ctx, getState());
  enterRule(_localctx, 4, BioGPUParser::RuleModulePath);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(BioGPUParser::ID);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == BioGPUParser::DOT) {
      setState(91);
      match(BioGPUParser::DOT);
      setState(92);
      match(BioGPUParser::ID);
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PipelineContext ------------------------------------------------------------------

BioGPUParser::PipelineContext::PipelineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::PipelineContext::PIPELINE() {
  return getToken(BioGPUParser::PIPELINE, 0);
}

tree::TerminalNode* BioGPUParser::PipelineContext::ID() {
  return getToken(BioGPUParser::ID, 0);
}

tree::TerminalNode* BioGPUParser::PipelineContext::LBRACE() {
  return getToken(BioGPUParser::LBRACE, 0);
}

BioGPUParser::PipelineBodyContext* BioGPUParser::PipelineContext::pipelineBody() {
  return getRuleContext<BioGPUParser::PipelineBodyContext>(0);
}

tree::TerminalNode* BioGPUParser::PipelineContext::RBRACE() {
  return getToken(BioGPUParser::RBRACE, 0);
}


size_t BioGPUParser::PipelineContext::getRuleIndex() const {
  return BioGPUParser::RulePipeline;
}


std::any BioGPUParser::PipelineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitPipeline(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::PipelineContext* BioGPUParser::pipeline() {
  PipelineContext *_localctx = _tracker.createInstance<PipelineContext>(_ctx, getState());
  enterRule(_localctx, 6, BioGPUParser::RulePipeline);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(BioGPUParser::PIPELINE);
    setState(99);
    match(BioGPUParser::ID);
    setState(100);
    match(BioGPUParser::LBRACE);
    setState(101);
    pipelineBody();
    setState(102);
    match(BioGPUParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PipelineBodyContext ------------------------------------------------------------------

BioGPUParser::PipelineBodyContext::PipelineBodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BioGPUParser::InputDeclContext* BioGPUParser::PipelineBodyContext::inputDecl() {
  return getRuleContext<BioGPUParser::InputDeclContext>(0);
}

BioGPUParser::OutputDeclContext* BioGPUParser::PipelineBodyContext::outputDecl() {
  return getRuleContext<BioGPUParser::OutputDeclContext>(0);
}

BioGPUParser::ReferencesDeclContext* BioGPUParser::PipelineBodyContext::referencesDecl() {
  return getRuleContext<BioGPUParser::ReferencesDeclContext>(0);
}

std::vector<BioGPUParser::StageContext *> BioGPUParser::PipelineBodyContext::stage() {
  return getRuleContexts<BioGPUParser::StageContext>();
}

BioGPUParser::StageContext* BioGPUParser::PipelineBodyContext::stage(size_t i) {
  return getRuleContext<BioGPUParser::StageContext>(i);
}


size_t BioGPUParser::PipelineBodyContext::getRuleIndex() const {
  return BioGPUParser::RulePipelineBody;
}


std::any BioGPUParser::PipelineBodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitPipelineBody(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::PipelineBodyContext* BioGPUParser::pipelineBody() {
  PipelineBodyContext *_localctx = _tracker.createInstance<PipelineBodyContext>(_ctx, getState());
  enterRule(_localctx, 8, BioGPUParser::RulePipelineBody);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BioGPUParser::INPUT) {
      setState(104);
      inputDecl();
    }
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BioGPUParser::OUTPUT) {
      setState(107);
      outputDecl();
    }
    setState(111);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BioGPUParser::REFERENCES) {
      setState(110);
      referencesDecl();
    }
    setState(114); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(113);
      stage();
      setState(116); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == BioGPUParser::T__0

    || _la == BioGPUParser::STAGE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputDeclContext ------------------------------------------------------------------

BioGPUParser::InputDeclContext::InputDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::InputDeclContext::INPUT() {
  return getToken(BioGPUParser::INPUT, 0);
}

tree::TerminalNode* BioGPUParser::InputDeclContext::COLON() {
  return getToken(BioGPUParser::COLON, 0);
}

std::vector<BioGPUParser::InputParamContext *> BioGPUParser::InputDeclContext::inputParam() {
  return getRuleContexts<BioGPUParser::InputParamContext>();
}

BioGPUParser::InputParamContext* BioGPUParser::InputDeclContext::inputParam(size_t i) {
  return getRuleContext<BioGPUParser::InputParamContext>(i);
}

tree::TerminalNode* BioGPUParser::InputDeclContext::LBRACE() {
  return getToken(BioGPUParser::LBRACE, 0);
}

tree::TerminalNode* BioGPUParser::InputDeclContext::RBRACE() {
  return getToken(BioGPUParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> BioGPUParser::InputDeclContext::COMMA() {
  return getTokens(BioGPUParser::COMMA);
}

tree::TerminalNode* BioGPUParser::InputDeclContext::COMMA(size_t i) {
  return getToken(BioGPUParser::COMMA, i);
}


size_t BioGPUParser::InputDeclContext::getRuleIndex() const {
  return BioGPUParser::RuleInputDecl;
}


std::any BioGPUParser::InputDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitInputDecl(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::InputDeclContext* BioGPUParser::inputDecl() {
  InputDeclContext *_localctx = _tracker.createInstance<InputDeclContext>(_ctx, getState());
  enterRule(_localctx, 10, BioGPUParser::RuleInputDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(BioGPUParser::INPUT);
    setState(119);
    match(BioGPUParser::COLON);
    setState(132);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BioGPUParser::ID: {
        setState(120);
        inputParam();
        break;
      }

      case BioGPUParser::LBRACE: {
        setState(121);
        match(BioGPUParser::LBRACE);
        setState(122);
        inputParam();
        setState(127);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == BioGPUParser::COMMA) {
          setState(123);
          match(BioGPUParser::COMMA);
          setState(124);
          inputParam();
          setState(129);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(130);
        match(BioGPUParser::RBRACE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputParamContext ------------------------------------------------------------------

BioGPUParser::InputParamContext::InputParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::InputParamContext::ID() {
  return getToken(BioGPUParser::ID, 0);
}

tree::TerminalNode* BioGPUParser::InputParamContext::COLON() {
  return getToken(BioGPUParser::COLON, 0);
}

BioGPUParser::DataTypeContext* BioGPUParser::InputParamContext::dataType() {
  return getRuleContext<BioGPUParser::DataTypeContext>(0);
}

tree::TerminalNode* BioGPUParser::InputParamContext::OPTIONAL() {
  return getToken(BioGPUParser::OPTIONAL, 0);
}


size_t BioGPUParser::InputParamContext::getRuleIndex() const {
  return BioGPUParser::RuleInputParam;
}


std::any BioGPUParser::InputParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitInputParam(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::InputParamContext* BioGPUParser::inputParam() {
  InputParamContext *_localctx = _tracker.createInstance<InputParamContext>(_ctx, getState());
  enterRule(_localctx, 12, BioGPUParser::RuleInputParam);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(BioGPUParser::ID);
    setState(135);
    match(BioGPUParser::COLON);
    setState(136);
    dataType();
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == BioGPUParser::OPTIONAL) {
      setState(137);
      match(BioGPUParser::OPTIONAL);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputDeclContext ------------------------------------------------------------------

BioGPUParser::OutputDeclContext::OutputDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::OutputDeclContext::OUTPUT() {
  return getToken(BioGPUParser::OUTPUT, 0);
}

tree::TerminalNode* BioGPUParser::OutputDeclContext::COLON() {
  return getToken(BioGPUParser::COLON, 0);
}

std::vector<BioGPUParser::OutputParamContext *> BioGPUParser::OutputDeclContext::outputParam() {
  return getRuleContexts<BioGPUParser::OutputParamContext>();
}

BioGPUParser::OutputParamContext* BioGPUParser::OutputDeclContext::outputParam(size_t i) {
  return getRuleContext<BioGPUParser::OutputParamContext>(i);
}

tree::TerminalNode* BioGPUParser::OutputDeclContext::LBRACE() {
  return getToken(BioGPUParser::LBRACE, 0);
}

tree::TerminalNode* BioGPUParser::OutputDeclContext::RBRACE() {
  return getToken(BioGPUParser::RBRACE, 0);
}

std::vector<tree::TerminalNode *> BioGPUParser::OutputDeclContext::COMMA() {
  return getTokens(BioGPUParser::COMMA);
}

tree::TerminalNode* BioGPUParser::OutputDeclContext::COMMA(size_t i) {
  return getToken(BioGPUParser::COMMA, i);
}


size_t BioGPUParser::OutputDeclContext::getRuleIndex() const {
  return BioGPUParser::RuleOutputDecl;
}


std::any BioGPUParser::OutputDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitOutputDecl(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::OutputDeclContext* BioGPUParser::outputDecl() {
  OutputDeclContext *_localctx = _tracker.createInstance<OutputDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, BioGPUParser::RuleOutputDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(BioGPUParser::OUTPUT);
    setState(141);
    match(BioGPUParser::COLON);
    setState(154);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BioGPUParser::ID: {
        setState(142);
        outputParam();
        break;
      }

      case BioGPUParser::LBRACE: {
        setState(143);
        match(BioGPUParser::LBRACE);
        setState(144);
        outputParam();
        setState(149);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == BioGPUParser::COMMA) {
          setState(145);
          match(BioGPUParser::COMMA);
          setState(146);
          outputParam();
          setState(151);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(152);
        match(BioGPUParser::RBRACE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputParamContext ------------------------------------------------------------------

BioGPUParser::OutputParamContext::OutputParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BioGPUParser::OutputParamContext::ID() {
  return getToken(BioGPUParser::ID, 0);
}

tree::TerminalNode* BioGPUParser::OutputParamContext::COLON() {
  return getToken(BioGPUParser::COLON, 0);
}

BioGPUParser::DataTypeContext* BioGPUParser::OutputParamContext::dataType() {
  return getRuleContext<BioGPUParser::DataTypeContext>(0);
}


size_t BioGPUParser::OutputParamContext::getRuleIndex() const {
  return BioGPUParser::RuleOutputParam;
}


std::any BioGPUParser::OutputParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BioGPUVisitor*>(visitor))
    return parserVisitor->visitOutputParam(this);
  else
    return visitor->visitChildren(this);
}

BioGPUParser::OutputParamContext* BioGPUParser::outputParam() {
  OutputParamContext *_localctx = _tracker.createInstance<OutputParamContext>(_ctx, getState());
  enterRule(_localctx, 16, BioGPUParser::RuleOutputParam);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(BioGPUParser::ID);
    setState(157);
    match(BioGPUParser::COLON);
    setState(158);
    dataType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}
